AWS/terraform-akyn-task/module/security-groups.tf
resource "aws_security_group" "nginx_sg" {
  name        = ["dev_nginx_sg"]
  description = "SSH and Internal Traffic"
  vpc_id      = var.vpc_id
  tags        = var.tags
  # SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    self      = true
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
